src/snapshots/raoul__tests__run_vm_is_ok-5.snap
---
source: src/tests.rs
expression: vm.messages
---
[
    "true",
    "true",
    "true",
    "true",
    "true",
    "true",
    "4.1",
    "0",
    "16",
    "1",
    "true",
    "\n",
]
