src/snapshots/raoul__tests__run_vm_is_ok-8.snap
---
source: src/tests.rs
expression: vm.messages
---
[
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "4",
    "\n",
    "5",
    "\n",
    "6",
    "\n",
    "7",
    "5",
    "\n",
]
