src/snapshots/raoul__tests__run_vm_is_ok@aritmetic.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/aritmetic.ra
---
[
    "true",
    "true",
    "true",
    "true",
    "true",
    "true",
    "4.1",
    "0",
    "16",
    "1",
    "true",
    "\n",
]
