src/snapshots/raoul__tests__run_vm_is_ok@array-cte.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/array-cte.ra
---
[
    "0",
    "1",
    "2",
    "\n",
]
