src/snapshots/raoul__tests__run_vm_is_ok@array-simple.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/array-simple.ra
---
[
    "1",
    "2",
    "3",
    "2",
    "1",
    "\n",
]
