src/snapshots/raoul__tests__run_vm_is_ok@assignment-every-type.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/assignment-every-type.ra
---
[
    "1",
    "1",
    "my string",
    "false",
    "\n",
]
