src/snapshots/raoul__tests__run_vm_is_ok@assignment.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/assignment.ra
---
[
    "2",
    "2",
    "\n",
]
