src/snapshots/raoul__tests__run_vm_is_ok@binary-search.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/binary-search.ra
---
[
    "0",
    "6",
    "-1",
    "\n",
]
