src/snapshots/raoul__tests__run_vm_is_ok@block-or-statement.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/non-plot/block-or-statement.ra
---
[
    "42",
    "\n",
]
