src/snapshots/raoul__tests__run_vm_is_ok@bool-int.ra.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/valid/bool-int.ra
---
[
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "0",
    "\n",
]
